--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ backcall==0.2.0
     # via ipython
 build==0.10.0
     # via npe2
+cachetools==5.3.1
+    # via zetastitcher
 cachey==0.2.1
     # via napari
 certifi==2022.12.7
@@ -30,6 +32,8 @@ certifi==2022.12.7
     #   requests
 charset-normalizer==3.1.0
     # via requests
+clarabel==0.6.0
+    # via cvxpy
 click==8.1.3
     # via
     #   dask
@@ -43,8 +47,14 @@ colorama==0.4.6
     #   ipython
     #   sphinx
     #   tqdm
+coloredlogs==15.0.1
+    # via zetastitcher
 comm==0.1.3
     # via ipykernel
+cvxpy==1.4.1
+    # via zetastitcher
+daqp==0.5.1
+    # via qpsolvers
 dask[array]==2023.4.0
     # via napari
 debugpy==1.6.7
@@ -55,6 +65,10 @@ docstring-parser==0.15
     # via magicgui
 docutils==0.17.1
     # via sphinx
+ecos==2.0.12
+    # via
+    #   cvxpy
+    #   qpsolvers
 executing==1.2.0
     # via stack-data
 freetype-py==2.3.0
@@ -65,13 +79,19 @@ heapdict==1.0.1
     # via cachey
 hsluv==5.0.3
     # via vispy
+humanfriendly==10.0
+    # via coloredlogs
+humanize==4.8.0
+    # via zetastitcher
 idna==3.4
     # via requests
 imageio==2.27.0
     # via
     #   napari
     #   napari-svg
+    #   pims
     #   scikit-image
+    #   zetastitcher
 imagesize==1.4.1
     # via sphinx
 importlib-metadata==6.4.1
@@ -144,24 +164,42 @@ napari-svg==0.1.6
 nest-asyncio==1.5.6
     # via ipykernel
 networkx==3.1
-    # via scikit-image
+    # via
+    #   scikit-image
+    #   zetastitcher
 npe2==0.7.0
     # via napari
-numpy==1.24.2
+numpy==1.23.3
     # via
     #   -r requirements.in
+    #   clarabel
+    #   cvxpy
     #   dask
+    #   ecos
     #   imageio
     #   napari
     #   napari-svg
+    #   opencv-python
+    #   osqp
     #   pandas
+    #   pims
     #   pywavelets
+    #   qdldl
+    #   qpsolvers
     #   scikit-image
     #   scipy
+    #   scs
     #   tifffile
     #   vispy
+    #   zetastitcher
 numpydoc==1.5.0
     # via napari
+opencv-python==4.8.1.78
+    # via zetastitcher
+osqp==0.6.3
+    # via
+    #   cvxpy
+    #   qpsolvers
 packaging==23.1
     # via
     #   build
@@ -176,6 +214,7 @@ pandas==2.0.0
     # via
     #   -r requirements.in
     #   napari
+    #   zetastitcher
 parso==0.8.3
     # via jedi
 partd==1.4.0
@@ -187,6 +226,8 @@ pillow==9.5.0
     #   imageio
     #   napari
     #   scikit-image
+pims==0.6.1
+    # via zetastitcher
 pint==0.20.1
     # via napari
 platformdirs==3.2.0
@@ -198,6 +239,7 @@ psutil==5.9.4
     #   -r requirements.in
     #   ipykernel
     #   napari
+    #   zetastitcher
 psygnal==0.9.0
     # via
     #   app-model
@@ -206,6 +248,8 @@ psygnal==0.9.0
     #   npe2
 pure-eval==0.2.2
     # via stack-data
+pybind11==2.11.1
+    # via cvxpy
 pydantic==1.10.7
     # via
     #   app-model
@@ -223,6 +267,8 @@ pyopengl==3.1.6
     # via napari
 pyproject-hooks==1.0.0
     # via build
+pyreadline3==3.4.1
+    # via humanfriendly
 pyrsistent==0.19.3
     # via jsonschema
 python-dateutil==2.8.2
@@ -242,11 +288,16 @@ pyyaml==6.0
     #   dask
     #   napari
     #   npe2
+    #   zetastitcher
 pyzmq==25.0.2
     # via
     #   ipykernel
     #   jupyter-client
     #   qtconsole
+qdldl==0.1.7.post0
+    # via osqp
+qpsolvers==4.0.0
+    # via zetastitcher
 qtconsole==5.4.1
     # via napari-console
 qtpy==2.3.1
@@ -266,10 +317,24 @@ scikit-image==0.20.0
     #   napari
 scipy==1.9.1
     # via
+    #   clarabel
+    #   cvxpy
+    #   ecos
     #   napari
+    #   osqp
+    #   qdldl
+    #   qpsolvers
     #   scikit-image
+    #   scs
+    #   zetastitcher
+scs==3.2.3
+    # via
+    #   cvxpy
+    #   qpsolvers
 six==1.16.0
     # via python-dateutil
+slicerator==1.1.0
+    # via pims
 snowballstemmer==2.2.0
     # via sphinx
 sphinx==4.5.0
@@ -299,6 +364,7 @@ tifffile==2023.4.12
     #   -r requirements.in
     #   napari
     #   scikit-image
+    #   zetastitcher
 tomli==2.0.1
     # via
     #   build
@@ -346,5 +412,7 @@ wcwidth==0.2.6
     # via prompt-toolkit
 wrapt==1.15.0
     # via napari
+zetastitcher==0.7.0.post1
+    # via -r requirements.in
 zipp==3.15.0
     # via importlib-metadata
